fix: profile dropdown overflow issue fixed in mobiled devices

--- a/lookit/static/user/css/base.css
+++ b/lookit/static/user/css/base.css
@@ -4,9 +4,14 @@
     box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f8f8f8;
     color: #333;
     line-height: 1.6;
+    overflow-x: hidden;
 }
